thermostat-route/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: thermostat-service
subsets:
  - addresses:
      - ip: 192.168.178.53
    ports:
      - port: 80
