thermostat-route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermostat-service # This must match the Endpoints resource
spec:
  clusterIP: None # This makes it headless
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
